Add logging to the tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,8 @@ markers =
     no_req
     req
 asyncio_mode = auto
+log_format = %(funcName)s - Line %(lineno)d - %(message)s
+log_level = INFO
 
 [coverage:run]
 branch = True
